--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -1,5 +1,5 @@
-/* Change colors in this file to style to your needs on a global level. 
-Certain colors are used for different and multiply types of elements. 
+/* Change colors in this file to style to your needs on a global level.
+Certain colors are used for different and multiply types of elements.
 For greater control over colors visit each components .scss file. */
 
 // button colors
@@ -19,7 +19,7 @@ $blogCardTitleColor: #262626;
 $textColorDark: #ffffff;
 
 // toggle switch colors
-$toggleCheck: #2196f3;
+$toggleCheck: #000000;
 $toggleSwitchSliderBG: #ccc;
 
 // githubRepo specific colors
@@ -28,7 +28,7 @@ $githubRepoCardColor: rgb(88, 96, 105);
 $githubRepoCardRepoCardStatsColor: rgb(106, 115, 125);
 $githubRepoCardRepoNameColor: rgb(36, 41, 46);
 $githubProfileCardLocationTS: #ffebcd;
-$githubProfileCardBorder: #6c63ff;
+$githubProfileCardBorder: #000000;
 
 // light background colors
 $lightBackground1: #fff;
@@ -88,3 +88,4 @@ $medium: #000;
 $stackoverflow: #f48024;
 $instagram: #c13584;
 $kaggle: #20beff;
+$youtube: #c41000;
