--- a/src/components/socialMedia/SocialMedia.scss
+++ b/src/components/socialMedia/SocialMedia.scss
@@ -68,6 +68,10 @@
   background-color: $instagram;
 }
 
+.youtube i {
+  background-color: $youtube;
+}
+
 /* Hover Transition */
 .twitter i:hover,
 .google i:hover,
@@ -78,6 +82,7 @@
 .instagram i:hover,
 .stack-overflow i:hover,
 .kaggle i:hover,
+.youtube i:hover,
 .medium i:hover {
   background-color: $textColor;
 }
